# youtube_desktop_downloader

./: LICENSE.txt  README.md
src/: package-lock.json  package.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: download_lib.rs  main.rs  menu_lib.rs  tray_lib.rs
src/src/: App.tsx  index.css  main.tsx
src/src/assets/: supported_sites.md
src/src/components/: AboutModal.tsx  DownloadCard.tsx  DownloadInfoModal.tsx  SupportedSitesModal.tsx
src/src/lib/: config.ts  utils.ts
src/src/types/: config.ts  download.ts
