[package]
name = "youtube_desktop_downloader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["clipboard-write-text", "dialog-open", "fs-all", "path-all", "shell-open", "system-tray"] }
async-process = "1.5.0"
futures-lite = "1.12.0"
parking_lot = { version = "0.12", features = ["send_guard"] }
regex = "1.6.0"
lazy_static = "1.4.0"
remove_dir_all = "0.7.0"
sanitize-filename = "0.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
